# jarvis

./: .env.example  .gitignore  README.md  RESEARCH.md  RESEARCH_DEEP.md  RESEARCH_MEMORY.md  TEMPORAL.md  __init__.py  pyproject.toml  workflow.py
memory/: judge_beliefs.json
openspec/changes/trinity-adk-skills/: README.md  design.md  proposal.md  tasks.md
openspec/changes/trinity-adk-skills/specs/dreamer-skills/: spec.md
openspec/changes/trinity-adk-skills/specs/executor-skills/: spec.md
openspec/changes/trinity-phase-1/: design.md  proposal.md  tasks.md
openspec/changes/trinity-phase-2-memory/: README.md  design.md  proposal.md  tasks.md
openspec/changes/trinity-phase-3-a2a/: design.md  proposal.md  tasks.md
openspec/changes/trinity-temporal-durable-loop/: README.md  design.md  proposal.md  tasks.md
triforce/: __init__.py  __main__.py  agent.py  config.py  root_agent.py
triforce/agents/: __init__.py
triforce/agents/dreamer/: README.md  __init__.py  agent.py  prompts.py
triforce/agents/executor/: README.md  __init__.py  agent.py  prompts.py
triforce/agents/judge/: README.md  __init__.py  agent.py  prompts.py
triforce/memory/: __init__.py  beliefs.py  consolidation.py  episodic.py  journal.py  schema.py  ssgm.py  temporal_beliefs.py
triforce/modes/: __init__.py  awake.py  reflective.py  sleep.py
triforce/skills/episodic-recall/: SKILL.md
triforce/temporal/: __init__.py  activities.py  schedules.py  worker.py  workflows.py
triforce/tools/: __init__.py  journal_tools.py  state_tools.py
(+46 files in other folders)
