[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-triforce"
version = "0.1.0"
description = "Jarvis Trinity — three-agent AGI architecture powered by Google ADK"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.25.0",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
memory = [
    "mem0ai",
    "chromadb",
    "graphiti-core",
    "kuzu",
    "sentence-transformers",
]
temporal = [
    "temporalio",
    "google-genai",
]
all = [
    "jarvis-triforce[memory]",
    "jarvis-triforce[temporal]",
]
